--- a/Module 1 - Introduction/introduction.ipynb
+++ b/Module 1 - Introduction/introduction.ipynb
@@ -1,6 +1,13 @@
 {
  "cells": [
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "# Lesson 1: Introduction"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": 1,
    "metadata": {},
@@ -21,7 +28,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "# 1. Import Libraries"
+    "## 1. Import Libraries"
    ]
   },
   {
@@ -46,7 +53,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "# 2. Import Data"
+    "## 2. Import Data"
    ]
   },
   {
@@ -472,7 +479,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "# 3. Data Pre-processing"
+    "## 3. Data Pre-processing"
    ]
   },
   {
@@ -1564,7 +1571,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "# 4. Model Training"
+    "## 4. Model Training"
    ]
   },
   {
@@ -1641,7 +1648,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "# 5. Create Pipeline"
+    "## 5. An Improvement"
    ]
   },
   {
@@ -1766,6 +1773,13 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Keeping track of models you have trained --> using experimental tracker"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": 43,
    "metadata": {},
@@ -1795,7 +1809,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "# 7. Save Model"
+    "If train different lr, might overwrite result. (ie linear regression to lasso), model might be lost --> save to model registry"
    ]
   },
   {
@@ -1810,11 +1824,35 @@
    ]
   },
   {
-   "cell_type": "code",
-   "execution_count": null,
+   "cell_type": "markdown",
    "metadata": {},
-   "outputs": [],
-   "source": []
+   "source": [
+    "Save experimental tracker and model registry"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "# Notes"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "ML Pipeline\n",
+    "1. Load & Prepare Data\n",
+    "2. Vectorize\n",
+    "3. Train Model"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Idea: with this pipeline, can just execute python pipeline.py and we can parametrize it (easy to reproduce)"
+   ]
   }
  ],
  "metadata": {
